[package]
name = "relatable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
glob = "0.3"
petgraph = { version = "0.6", default-features = false, features = ["stable_graph", "matrix_graph"] }
log = "0.4"
walkdir = "2.5.0"